--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^13.0.2",
     "@rollup/plugin-node-resolve": "^8.4.0",
+    "path-to-regexp": "^6.1.0",
     "rollup": "^2.23.0",
     "rollup-plugin-uglify": "^6.0.4"
   },
