--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@rollup/plugin-commonjs": "^13.0.2",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "rollup": "^2.45.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "path-to-regexp": "^6.1.0"
   },
   "scripts": {
     "watch": "npx rollup -c -w",
