--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "BitsmistJS Extras v1",
   "private": true,
   "type": "module",
-  "dependencies": {},
+  "dependencies": {
+    "path-to-regexp": "^6.2.1"
+  },
   "devDependencies": {
-    "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^13.0.2",
-    "@rollup/plugin-node-resolve": "^8.4.0",
-    "rollup": "^2.45.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "path-to-regexp": "^6.1.0"
+    "@rollup/plugin-buble": "^1.0.2",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "msw": "^1.0.1",
+    "rollup": "^3.16.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "watch": "npx rollup -c -w",
