--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "bitsmist-js-extras_v1",
+  "name": "@bitsmist-js_v1/extras",
   "version": "0.12.0",
   "description": "Extra Components for BitsmistJS",
-  "main": "dist/bitsmist-js-extras_v1.esm.min.js",
+  "main": "./export.js",
   "type": "module",
   "dependencies": {
     "path-to-regexp": "^6.2.1"
   },
+  "peerDependencies": {
+    "@bitsmist-js_v1/core": "file:../bitsmist-js_v1"
+  },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "rollup": "^4.4.1"
