--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bitsmist-js_v1/extras",
   "version": "0.12.0",
   "description": "Extra Components for BitsmistJS",
-  "main": "./export.js",
+  "main": "./src/extras/export.js",
   "type": "module",
   "dependencies": {
     "path-to-regexp": "^6.2.1"
